[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pocket-flask-jwt-validate"
version = "0.0.1"
authors = [
  { name="Alex Dobrushskiy", email="adobrush@asu.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'Flask >= 2.0.0',
  'pyjwt >= 2.4.0',
  'cryptography >= 37.0.0'
]
